--- a/client/src/assets/styles/vars.scss
+++ b/client/src/assets/styles/vars.scss
@@ -9,6 +9,7 @@
     --font-family-oswald: 'Oswald', Arial, sans-serif;
     --font-family-open-sans: 'Open Sans', 'Helvetica Neue', Helvetica, Roboto,
         Arial, sans-serif;
+    --font-family-password: 'fontello';
 
     --font-color: rgb(241, 241, 241);
     --font-color-gray: #7b7a7b;
