--- a/client/src/components/ui/Input/Input.module.scss
+++ b/client/src/components/ui/Input/Input.module.scss
@@ -4,7 +4,7 @@
 
 .input {
     width: 100%;
-    background: rgba(241, 241, 241, 0.7);
+    background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     height: 45px;
     color: var(--font-color-gray);
@@ -33,6 +33,6 @@
     &::placeholder {
         font-family: var(--font-family-open-sans);
         font-size: 18px;
-        letter-spacing: 0px;
+        letter-spacing: 0;
     }
 }
