--- a/client/src/pages/Auth/Auth.module.scss
+++ b/client/src/pages/Auth/Auth.module.scss
@@ -19,6 +19,7 @@
         rgba(255, 255, 255, 0) 100%
     );
     border: 1px solid #43414a;
+    box-sizing: border-box;
     border-radius: 10px;
 }
 
